--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,16 +1,15 @@
 [supervisord]
 nodaemon=true
-user=root
 logfile=/app/logs/supervisord.log
 pidfile=/app/logs/supervisord.pid
+childlogdir=/app/logs
 
 [program:redis]
-command=redis-server --daemonize no --bind 0.0.0.0 --port 6379
+command=redis-server --daemonize no --bind 0.0.0.0 --port 6379 --save ""
 autostart=true
 autorestart=true
 stderr_logfile=/app/logs/redis.err.log
 stdout_logfile=/app/logs/redis.out.log
-user=appuser
 
 [program:fastapi]
 command=uvicorn main:app --host 0.0.0.0 --port 8000 --workers 1
@@ -19,7 +18,6 @@ autostart=true
 autorestart=true
 stderr_logfile=/app/logs/fastapi.err.log
 stdout_logfile=/app/logs/fastapi.out.log
-user=appuser
 
 [program:celery-esrgan]
 command=celery -A tasks worker --loglevel=info --concurrency=1 -Q esrgan -n esrgan@%%h
@@ -28,7 +26,6 @@ autostart=true
 autorestart=true
 stderr_logfile=/app/logs/celery-esrgan.err.log
 stdout_logfile=/app/logs/celery-esrgan.out.log
-user=appuser
 environment=C_FORCE_ROOT="true"
 
 [program:celery-gfpgan]
@@ -38,5 +35,4 @@ autostart=true
 autorestart=true
 stderr_logfile=/app/logs/celery-gfpgan.err.log
 stdout_logfile=/app/logs/celery-gfpgan.out.log
-user=appuser
 environment=C_FORCE_ROOT="true"
