--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ numpy==1.24.3
 opencv-python==4.8.1.78
 torch==2.1.0
 torchvision==0.16.0
-basicsr==1.4.2
+basicsr>=1.4.2
 facexlib==0.3.0
 gfpgan==1.3.8
 realesrgan==0.3.0
